packages/svelte/tests/validator/samples/inline-new-class/input.svelte
<script>
	const a = new class {
		foo = $state(0)
	}
</script>
