packages/svelte/tests/compiler-errors/samples/runes-wrong-bindable-placement/main.svelte
<script>
	const { a = $bindable() } = $state();
</script>
